--- a/css/index.css
+++ b/css/index.css
@@ -562,6 +562,8 @@ height: 50px;
 /*background-color: slategray;*/
 }
 .p0-container {
+padding-top: 100px;
+padding-bottom: 100px;
 padding-left: 50px;
 padding-right: 50px;
 display: grid;
@@ -746,6 +748,8 @@ grid-template-areas:
       /*background-color: slategray;*/
     }
     .p2-container {
+      padding-top: 100px;
+      padding-bottom: 100px;
       padding-left: 50px;
       padding-right: 50px;
       display: grid;
@@ -835,6 +839,8 @@ grid-template-areas:
       /*background-color: slategray;*/
     }
     .p3-container {
+      padding-top: 100px;
+      padding-bottom: 100px;
       padding-left: 50px;
       padding-right: 50px;
       display: grid;
@@ -867,6 +873,7 @@ grid-template-areas:
 }
 .p-a-item-a {
 grid-area: header_2;
+/*
 border-bottom: 1px solid black;
 /*background-color: orange;
 
